2002-01-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02845]
	* regex.c (newRegex0): check regex->storage[STORAGE_MAX]

2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02843] w3mmail.cgi.in update
	* scripts/w3mmail.cgi.in: add $SENDMAIL_OPT
		change html

2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02841] migemo patch
	* NEWS: migemo support
	* config.h.dist (USE_MIGEMO): added
	* configure: add use_migemo
	* fm.h (use_migemo): added
	* fm.h (migemo_command: added
	* main.c (fversion): add "migemo"
	* main.c (migemostr): added
	* main.c (srchcore): if use_migemo, use migemostr
	* rc.c (CMT_USE_MIGEMO): added
	* rc.c (CMT_MIGEMO_COMMAND): added
	* rc.c (params3): add use_migemo, migemo_command

2002-01-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (fversion): add "external-uri-loader,w3mmailer"

2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02840]
	* scripts/w3mmail.cgi.in: use LOCAL_COOKIE
	* scripts/w3mmail.cgi.in: no need HTTP response header
	* scripts/w3mmail.cgi.in: fix typo $nkf_NKF
	* scripts/w3mmail.cgi.in: eval { use NKF; } is perl5ism
	* scripts/multipart/multipart.cgi.in: ditto

2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02835]
	* rc.c: move label_topline, nextpage_topline from param3 to param1
		param7 is SSL Setting

2002-01-15  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02834] mailto: use external program
	* NEWS: use w3mmail.cgi for mailto: URL
	* configure: add use_w3mmailer
	* frame.c (createFrameFile): ifndef USE_W3MMAILER
	* main.c (followA): ifndef USE_W3MMAILER
	* main.c (cmd_loadURL): ifndef USE_W3MMAILER
	* url.c (schemetable): ifndef USE_W3MMAILER, mailto: become SCM_UNKNOWN
	* url.c (parseURL2): ifndef USE_W3MMAILER
	* url.c (_parsedURL2Str): ifndef USE_W3MMAILER
	* url.c (default_urimethods): added
	* url.c (searchURIMethods): check default_urimethods
	* scripts/Makefile: add w3mmail.cgi
	* scritps/w3mmail.cgi.in: added