@@ -172,8 +172,10 @@ newRegex0(char **ex, int igncase, Regex *regex, char **msg, int level)
 #endif
 		else
 		    *(st_ptr++) = (unsigned char)*(p++);
-		if (st_ptr >= &regex->storage[STORAGE_MAX])
-		    *msg = "Regular expression too long";
+		if (st_ptr >= &regex->storage[STORAGE_MAX]) {
+		    if (msg)
+			*msg = "Regular expression too long";
+		}
 		return NULL;
 	    }
 	    *(st_ptr++) = '\0';
