@@ -1,3 +1,8 @@
+2002-01-16  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02846]
+	* regex.c (newRegex0): check msg
+
 2002-01-16  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02845]
